# central_uart

./: .gitignore  README.md  README.zh-CN.md
apps/nrf52840_ble_at_host/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
apps/nrf52840_ble_at_host/src/: app_common.c  app_common.h  at_host.c  at_host.h  main.c  profile_manager.c  profile_manager.h  settings.c  settings.h
firmware/nrf52840_ble_at_host/: nrf52840_ble_at_host.hex
python/: ble_at.py
python/examples/: e2e_stream_test.py  loop_test.py  scan.py  stress.py
scripts/: build_nrf52840_ble_at_host.ps1  flash_nrf52840_ble_at_host.ps1  publish_nrf52840_ble_at_host_firmware.ps1
